# image-localizer

./: .gitignore  CLAUDE.md  README.md  model-id.md  pyproject.toml  requirements.txt
configs/sites/: amazon.yml  generic.yml  playwright.yml
src/image_localizer/: __main__.py  cli.py  config.py  download.py  env.py  image_editor.py  models.py  pipeline.py
src/image_localizer/ocr/: base.py  easyocr_engine.py  google_vision_engine.py  registry.py  tesseract_engine.py
src/image_localizer/scrapers/: amazon.py  base.py  generic.py  playwright.py  registry.py
src/image_localizer/translation/: base.py  claude_engine.py  openai_engine.py  registry.py
tests/: test_env.py  test_google_vision.py  test_image_editor.py  test_pipeline.py
